add module facture and search

--- a/src/app/modules/admin/expense/bill/bill-add/bill-add.component.html
+++ b/src/app/modules/admin/expense/bill/bill-add/bill-add.component.html
@@ -121,6 +121,7 @@
                                             bindLabel="name"
                                             bindValue="id"
                                             formArrayName="item"
+                                            placeholder="Choisissez ... "
                                             class="w-60 max-w-xs"
                                             (change)="onSelectionItemChange($event, item)"
                                         >
@@ -132,6 +133,7 @@
                                             bindLabel="name"
                                             bindValue="id"
                                             formArrayName="unit_id"
+                                            placeholder="Choisissez..."
                                             class="w-60 max-w-xs"
                                             (change)="onSelectedUnit($event, item)"
                                         >
