--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -85,6 +85,17 @@
                     </mat-error>
                 </mat-form-field>
 
+                <mat-form-field class="w-full">
+                    <mat-label>Clé</mat-label>
+                    <input
+                        id="key"
+                        name="api"
+                        placeholder="Clé"
+                        formControlName="api"
+                        matInput
+                        required>
+                </mat-form-field>
+
                 <!-- Actions -->
                 <!--<div class="inline-flex items-center justify-between w-full mt-1.5">
                     <mat-checkbox
