--- a/src/app/modules/admin/expense/bill/bill-add/bill-add.component.html
+++ b/src/app/modules/admin/expense/bill/bill-add/bill-add.component.html
@@ -1,3 +1,4 @@
+<script src="../../../leave/dialog-add/dialog-add.component.ts"></script>
 <div class="flex flex-col flex-auto min-w-0">
     <div class="flex-auto p-6 sm:p-10">
         <mat-card>
