--- a/src/app/modules/admin/expense/bill/bill-detail/bill-detail.component.html
+++ b/src/app/modules/admin/expense/bill/bill-detail/bill-detail.component.html
@@ -2,7 +2,7 @@
     <div class="flex-auto p-6 sm:p-10">
         <mat-card class="pr-8 relative">
             <form [formGroup]="billForm">
-                <mat-tab-group animationDuration="0ms">
+                <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start" animationDuration="5ms">
                     <mat-tab label="Facture">
                         <div class=" grid grid-rows-3 grid-flow-col gap-3 grid-cols-3 mt-6">
                             <div class="grid grid-cols-3 items-center">
