--- a/src/app/modules/admin/expense/bill/bill.component.html
+++ b/src/app/modules/admin/expense/bill/bill.component.html
@@ -21,22 +21,22 @@
                 </div>
             </form>
         </div>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 w-full min-w-0 ng-star-inserted">
-            <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 w-full min-w-0 ng-star-inserted mt-3">
+            <div class="flex flex-col flex-auto p-6 bg-card  rounded-2xl overflow-hidden">
                 <div class="flex flex-col items-center mt-2">
                     <div class="text-6xl sm:text-6xl font-bold tracking-tight leading-none text-blue-400">21 MGA</div>
                     <div class="text-lg pt-1.5 font-medium text-blue-600 dark:text-blue-500">Total dépenses</div>
                 </div>
             </div>
 
-            <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+            <div class="flex flex-col flex-auto p-6 bg-card  rounded-2xl overflow-hidden">
                 <div class="flex flex-col items-center mt-2">
                     <div class="text-6xl sm:text-6xl font-bold tracking-tight leading-none text-green-400">0 MGA</div>
                     <div class="text-lg pt-1.5 font-medium text-green-600 dark:text-green-500">Payées</div>
                 </div>
             </div>
 
-            <div class="flex flex-col flex-auto p-6 bg-card shadow rounded-2xl overflow-hidden">
+            <div class="flex flex-col flex-auto p-6 bg-card  rounded-2xl overflow-hidden">
                 <div class="flex flex-col items-center mt-2">
                     <div class="text-6xl sm:text-6xl font-bold tracking-tight leading-none text-red-400">0 MGA</div>
                     <div class="text-lg pt-1.5 font-medium text-red-600 dark:text-red-500">Impayées</div>
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="example-container mat-elevation-z8 mt-4">
+        <div class="example-container mat-elevation-z0 mt-4">
             <div class="example-loading-shade"
                  *ngIf="isLoadingResults || isRateLimitReached">
                 <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
@@ -96,7 +96,7 @@
                     <ng-container matColumnDef="searchContact">
                         <th mat-header-cell *matHeaderCellDef>
                             <form class="example-form">
-                                <mat-form-field class="example-full-width w-full mt-3">
+                                <mat-form-field class="example-full-width w-full">
                                     <input type="text"
                                            placeholder="Contact..."
                                            matInput
@@ -119,7 +119,7 @@
                     <ng-container matColumnDef="searchCategory">
                         <th mat-header-cell *matHeaderCellDef>
                             <form class="example-form">
-                                <mat-form-field class="example-full-width w-full mt-3">
+                                <mat-form-field class="example-full-width w-full ">
                                     <input #inputSearchCategory
                                            type="text"
                                            placeholder="Catégorie..."
@@ -143,7 +143,7 @@
                     <ng-container matColumnDef="searchDescription">
                         <th mat-header-cell *matHeaderCellDef>
                             <form class="example-form">
-                                <mat-form-field class="example-full-width w-full mt-3">
+                                <mat-form-field class="example-full-width w-full ">
                                     <input placeholder="Recherche..." matInput
                                            [(ngModel)]="searchDescription"
                                            type="text" name="userQuestion" id="userQuestions"
@@ -162,7 +162,7 @@
                     <ng-container matColumnDef="searchAmount">
                         <th mat-header-cell *matHeaderCellDef [attr.colspan]="2">
                             <form class="example-form">
-                                <mat-form-field class="example-full-width w-full mt-3">
+                                <mat-form-field class="example-full-width w-full ">
                                     <input #inputSearchAmount
                                            type="text"
                                            placeholder="Montant..."
